--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "react-starter",
+  "name": "fake-system-update",
   "version": "2.0.0",
-  "description": "React webapp starter",
+  "description": "模拟系统升级界面 - 摸鱼神器",
   "main": "index.js",
   "dependencies": {
     "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
     "bfj": "^7.0.2",
+    "copy-to-clipboard": "^3.3.1",
     "core-js": "^3.8.2",
     "css-loader": "5.0.1",
     "dotenv": "8.2.0",
@@ -41,7 +42,6 @@
     "@babel/preset-react": "^7.12.10",
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
-    "auto-changelog": "^2.2.1",
     "babel-eslint": "10.1.0",
     "babel-loader": "^8.2.2",
     "babel-plugin-import": "^1.13.3",
@@ -49,41 +49,38 @@
     "eslint-config-prettier": "^7.1.0",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "gh-pages": "^3.1.0",
     "husky": "^4.3.7",
     "lint-staged": "^10.5.3",
     "prettier": "^2.2.1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/zerosoul/react-starter.git"
+    "url": "git+https://github.com/zerosoul/fake-system-update.git"
   },
   "keywords": [
-    "template",
+    "fake",
     "react",
-    "frontend",
+    "system",
     "tool",
-    "amazing"
+    "prank"
   ],
   "author": "Tristan",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/zerosoul/react-starter/issues"
+    "url": "https://github.com/zerosoul/fake-system-update/issues"
   },
-  "homepage": "http://works.yangerxiao.com/react-starter",
+  "homepage": "https://works.yangerxiao.com/fsu",
   "engines": {
     "node": ">=10.0.0",
     "npm": ">=6.0.0"
   },
   "scripts": {
     "start": "node scripts/start.js",
-    "build": "node scripts/build.js",
-    "deploy": "npm run build && gh-pages -d build",
-    "changelog": "auto-changelog -p --release-summary -l false --template changelog.template.hbs && git add CHANGELOG.md"
+    "build": "node scripts/build.js"
   },
   "browserslist": {
     "production": [
-      ">0.2%",
+      ">80%",
       "not dead",
       "not op_mini all"
     ],
