--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^17.0.1",
     "react-dev-utils": "^11.0.1",
     "react-dom": "^17.0.1",
+    "react-github-fork-ribbon": "^0.6.0",
     "react-refresh": "^0.9.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
