--- a/.eslintrc
+++ b/.eslintrc
@@ -6,6 +6,7 @@
     "no-console": "off",
     "react/prop-types": 0,
     "no-unused-vars": ["error", { "ignoreRestSiblings": true }],
+    "react/jsx-no-target-blank":0,
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn",
     "max-lines": ["warn", { "max": 500 }],
