--- a/package.json
+++ b/package.json
@@ -1,58 +1,38 @@
 {
   "name": "fake-system-update",
-  "version": "2.0.0",
+  "version": "2.1.0",
   "description": "模拟系统升级界面 - 摸鱼神器",
-  "main": "index.js",
+  "main": "main.jsx",
+  "engines": {
+    "node": ">=15.0.0",
+    "npm": ">=7.0.0"
+  },
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "serve": "vite preview",
+    "prepare": "husky install"
+  },
   "dependencies": {
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
-    "bfj": "^7.0.2",
-    "copy-to-clipboard": "^3.3.1",
-    "core-js": "^3.8.2",
-    "css-loader": "5.0.1",
-    "dotenv": "8.2.0",
-    "dotenv-expand": "5.1.0",
-    "file-loader": "6.2.0",
-    "fs-extra": "^9.0.1",
-    "html-webpack-plugin": "4.5.1",
-    "mini-css-extract-plugin": "1.3.3",
-    "pnp-webpack-plugin": "1.6.4",
-    "react": "^17.0.1",
-    "react-dev-utils": "^11.0.1",
-    "react-dom": "^17.0.1",
-    "react-github-fork-ribbon": "^0.6.0",
-    "react-refresh": "^0.9.0",
-    "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.0",
-    "style-loader": "2.0.0",
-    "styled-components": "^5.2.1",
-    "styled-reset": "^4.3.4",
-    "terser-webpack-plugin": "4.2.3",
-    "url-loader": "4.1.1",
-    "webpack": "4.44.2",
-    "webpack-dev-server": "3.11.1",
-    "webpack-manifest-plugin": "3.0.0",
-    "workbox-webpack-plugin": "6.0.2"
+    "copy-to-clipboard": "^3.3.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-github-fork-ribbon": "^0.7.1",
+    "react-router": "^6.4.2",
+    "react-router-dom": "^6.4.2",
+    "styled-components": "^5.3.6",
+    "styled-reset": "^4.4.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.10",
-    "@babel/plugin-proposal-class-properties": "^7.12.1",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.12.1",
-    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/polyfill": "^7.12.1",
-    "@babel/preset-env": "^7.12.11",
-    "@babel/preset-react": "^7.12.10",
-    "@commitlint/cli": "^11.0.0",
-    "@commitlint/config-conventional": "^11.0.0",
-    "babel-eslint": "10.1.0",
-    "babel-loader": "^8.2.2",
-    "babel-plugin-import": "^1.13.3",
-    "eslint": "^7.17.0",
-    "eslint-config-prettier": "^7.1.0",
-    "eslint-plugin-react": "^7.22.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "husky": "^4.3.7",
-    "lint-staged": "^10.5.3",
-    "prettier": "^2.2.1"
+    "@vitejs/plugin-react": "^2.1.0",
+    "eslint": "^8.26.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-react": "^7.31.10",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "husky": "^8.0.1",
+    "lint-staged": "^13.0.3",
+    "prettier": "^2.7.1",
+    "vite": "^3.1.8"
   },
   "repository": {
     "type": "git",
@@ -70,15 +50,7 @@
   "bugs": {
     "url": "https://github.com/zerosoul/fake-system-update/issues"
   },
-  "homepage": "https://works.yangerxiao.com/fsu",
-  "engines": {
-    "node": ">=10.0.0",
-    "npm": ">=6.0.0"
-  },
-  "scripts": {
-    "start": "node scripts/start.js",
-    "build": "node scripts/build.js"
-  },
+  "homepage": "https://works.yangerxiao.com/fsu/",
   "browserslist": {
     "production": [
       ">80%",
